--- a/frontend/twig/home.html.twig
+++ b/frontend/twig/home.html.twig
@@ -1,5 +1,8 @@
 {% extends "/layout.html.twig" %}
 
 {% block body %}
+<div class="container">
     <h1>Skromne początki, wielkie marzenia...</h1>
+    <p class="lead">Bootstrap 4</p>
+</div>
 {% endblock %}
