Współpraca Bootstrap, SASS, Font Awesome z Webpack

--- a/frontend/twig/home.html.twig
+++ b/frontend/twig/home.html.twig
@@ -3,6 +3,6 @@
 {% block body %}
 <div class="container">
     <h1>Skromne początki, wielkie marzenia...</h1>
-    <p class="lead">Bootstrap 4</p>
+    <p class="lead"><i class="fa fa-cog" aria-hidden="true"></i> Bootstrap 4</p>
 </div>
 {% endblock %}
