--- a/frontend/twig/layout.html.twig
+++ b/frontend/twig/layout.html.twig
@@ -7,6 +7,31 @@
     
 </head>
 <body>
+    <nav class="navbar navbar-dark bg-inverse navbar-fixed-top">
+        <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
+        <div class="collapse navbar-toggleable-sm" id="navbarResponsive">
+            <a class="navbar-brand" href="#"><i class="fa fa-eye" aria-hidden="true"></i> OCR Online</a>
+            <ul class="nav navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Główna <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Ostatnie</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Najlepsze</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">O nas</a>
+            </li>
+            </ul>
+            <ul class="nav navbar-nav float-md-right">
+                <li class="nav-item">
+                    <a class="btn btn-primary" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Zaloguj</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     {% block body %}
         <h1>Hello!</h1>
     {% endblock %}
