--- a/frontend/twig/layout.html.twig
+++ b/frontend/twig/layout.html.twig
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <base href="/">
     <title>{% block title %}OCR Online{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/assets/bundle.css">
@@ -29,20 +30,22 @@
     <nav class="navbar navbar-dark bg-inverse navbar-fixed-top">
         <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-toggleable-sm" id="navbarResponsive">
-            <a class="navbar-brand" href="#"><i class="fa fa-eye" aria-hidden="true"></i> OCR Online</a>
+            <a class="navbar-brand" href="/"><i class="fa fa-eye" aria-hidden="true"></i> OCR Online</a>
             <ul class="nav navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Główna <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Główna <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Ostatnie</a>
+                <a class="nav-link" href="/last">Ostatnie</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Najlepsze</a>
+                <a class="nav-link" href="/best">Najlepsze</a>
             </li>
+            {% if is_granted('ROLE_USER') %}
             <li class="nav-item">
-                <a class="nav-link" href="#">O nas</a>
+                <a class="nav-link" href="/user/">Panel użytkownika</a>
             </li>
+            {% endif %}
             </ul>
             <span class="navbar-text float-xs-right text-muted">
                 {% if is_granted('ROLE_USER') %}
