--- a/frontend/sass/app.scss
+++ b/frontend/sass/app.scss
@@ -25,3 +25,18 @@ $icons-color: adjust-hue($brand-success, -20deg);
 body {
   margin-top: 90px; 
 }
+
+.card-columns {
+  @include media-breakpoint-only(xs) {
+    column-count: 2;
+  }
+  @include media-breakpoint-only(sm) {
+    column-count: 2;
+  }
+  @include media-breakpoint-only(lg) {
+    column-count: 3;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 4;
+  }
+}
