--- a/web/assets/bundle.css
+++ b/web/assets/bundle.css
@@ -5294,7 +5294,7 @@ tbody.collapse.in {
 
   .card-deck .card {
     -webkit-box-flex: 1;
-        -ms-flex: 1 0 0;
+        -ms-flex: 1 0 0px;
             flex: 1 0 0;
     margin-right: 0.625rem;
     margin-bottom: 0;
@@ -5313,7 +5313,7 @@ tbody.collapse.in {
 
   .card-group .card {
     -webkit-box-flex: 1;
-        -ms-flex: 1 0 0;
+        -ms-flex: 1 0 0px;
             flex: 1 0 0;
   }
 
@@ -8139,6 +8139,38 @@ a.text-gray-dark:hover {
 
 body {
   margin-top: 90px;
+}
+
+@media (max-width: 575px) {
+  .card-columns {
+    -webkit-column-count: 2;
+       -moz-column-count: 2;
+            column-count: 2;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+  .card-columns {
+    -webkit-column-count: 2;
+       -moz-column-count: 2;
+            column-count: 2;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .card-columns {
+    -webkit-column-count: 3;
+       -moz-column-count: 3;
+            column-count: 3;
+  }
+}
+
+@media (min-width: 1200px) {
+  .card-columns {
+    -webkit-column-count: 4;
+       -moz-column-count: 4;
+            column-count: 4;
+  }
 }
 
 
