--- a/frontend/twig/layout.html.twig
+++ b/frontend/twig/layout.html.twig
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
     <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <!--<meta name="msapplication-TileColor" content="#FFFFFF" />-->
     <meta name="msapplication-TileImage" content="mstile-144x144.png" />
     <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
@@ -37,10 +37,10 @@
                 <a class="nav-link" href="/">Główna <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/last">Ostatnie</a>
+                <a class="nav-link" href="/document/last">Ostatnie</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/best">Najlepsze</a>
+                <a class="nav-link" href="/document/best">Najlepsze</a>
             </li>
             {% if is_granted('ROLE_USER') %}
             <li class="nav-item">
