--- a/frontend/twig/document/last.html.twig
+++ b/frontend/twig/document/last.html.twig
@@ -1,1 +1,17 @@
 {% extends "/layout.html.twig" %}
+
+{% block body %}
+<div class="container">
+<h1>Ostatnie dokumenty</h1>
+    <div class="row">
+        <div class="col-xs-12">
+            
+            <div class="card-columns">
+                    {% for document in documents %}
+                        {{ doc.entry(document) }}
+                    {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
