--- a/frontend/twig/layout.html.twig
+++ b/frontend/twig/layout.html.twig
@@ -28,11 +28,14 @@
     <meta name="msapplication-square310x310logo" content="assets/favicon/mstile-310x310.png" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-inverse navbar-fixed-top">
-        <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
-        <div class="collapse navbar-toggleable-sm" id="navbarResponsive">
-            <a class="navbar-brand" href="/"><i class="fa fa-eye" aria-hidden="true"></i> OCR Online</a>
-            <ul class="nav navbar-nav">
+    <nav class="navbar fixed-top navbar-toggleable-md navbar-inverse bg-inverse">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="/"><i class="fa fa-eye" aria-hidden="true"></i> OCR Online</a>
+        <div class="collapse navbar-toggleable-sm navbar-collapse" id="navbarResponsive">
+
+            <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="/">Główna <span class="sr-only">(current)</span></a>
             </li>
