--- a/frontend/twig/layout.html.twig
+++ b/frontend/twig/layout.html.twig
@@ -36,18 +36,18 @@
         <div class="collapse navbar-toggleable-sm navbar-collapse" id="navbarResponsive">
 
             <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item {% if page is defined and page starts with 'home' %} active {% endif %}">
                 <a class="nav-link" href="/">Główna <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if page is defined and page starts with 'last' %} active {% endif %}">
                 <a class="nav-link" href="/document/last">Ostatnie</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if page is defined and page starts with 'best' %} active {% endif %}">
                 <a class="nav-link" href="/document/best">Najlepsze</a>
             </li>
             {% if is_granted('ROLE_USER') %}
             <li class="nav-item">
-                <a class="nav-link" href="/user/">Panel użytkownika</a>
+                <a class="nav-link {% if page is defined and page starts with 'user' %} active {% endif %}" href="/user/">Panel użytkownika</a>
             </li>
             {% endif %}
             </ul>
